--- a/css/main.css
+++ b/css/main.css
@@ -13,9 +13,9 @@ html {
   height: 100%;
 }
 body {
-  background-color: #333F33;
+  background-color: #ffffff;
   font-family: 'Lato', sans-serif;
-  color: #ffffff;
+  color: #FF9F1C;
   margin: 0;
   padding: 0;
   /*overflow: hidden; */
@@ -25,33 +25,39 @@ body ::selection {
   color: #333F33;
   background: #FF9F1C;
 }
-.wrapper {
+/*.wrapper {
   height: 100vh;
   width: 100vw;
   display: grid;
   grid-template-rows: 1fr 10fr 1fr;
-}
+} */
 h1 {
   font-size: 2rem;
   font-family: 'DamienDisplayBold', serif;
-  color: #ffffff;
+  color: #FF9F1C;
   letter-spacing: .1rem;
+}
+h6 {
+  color: #343f34;
 }
 
 p {
   font-size: 1em;
-  font-family: helvetica, sans-serif;
-  color: #ffffff;
+  font-family: 'Lato', sans-serif;
+  color: #FF9F1C;
+  margin: 1em 0;
+  line-height: 1.5;
 }
 header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 100vw;
   height: 8em;
   position: fixed;
   padding: 2em;
+  z-index: 10;
 }
 .circle {
   height: 5em;
@@ -62,32 +68,72 @@ header {
   position: absolute;
 }
 .circle-2 {
-  height: 20em;
-  width: 20em;
-  border: 4px solid #FF9F1C;
+  height: 10em;
+  width: 10em;
+  background-color: #FF9F1C;
+/*  border: 4px solid #FF9F1C; */
   border-radius: 50%;
 }
+
 .profile {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
   flex-direction: column;
   grid-column: 1;
+  grid-row: 1 / 3;
 }
 .line {
-  width: 90%;
-  border-bottom: 4px solid #FF9F1C;
+  width: 93%;
+  border-bottom: 2px solid #FF9F1C;
+}
+.line-2 {
+  width: 100%;
+  height: 1em;
+  border-bottom: 2px solid #FF9F1C;
+  grid-column: 2 / 4;
+  display: flex;
+  align-self: flex-start;
+  grid-row: 1;
+  padding-top: 3em;
 }
 .item {
   z-index: 5;
-  margin-left: 2em;
-  width: 3em;
-  height: 3em;
-  mix-blend-mode: screen;
+  margin: 1.5em;
+  width: 5em;
+  height: 5em;
   background-size: contain;
+  background-repeat: no-repeat;
+}
+.home {
+  mix-blend-mode: screen;
+  font-family: 'Lato', sans-serif;
+  color: #FF9F1C;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: column;
+  margin: 1.25em 0 0 1.5em;
+  height: 3em;
 }
 .onion {
   background-image: url("../assets/onion.svg");
+}
+.haenyo {
+  background-image: url("../assets/haenyo/haenyo_logo.svg");
+}
+.scratchmade {
+  mix-blend-mode: screen;
+  background-image: url("../assets/scratchmade/scratchmade.svg");
+}
+.powerslam {
+  background-image: url("../assets/powerslam/psw_logo.svg");
+}
+.foodshed {
+  background-image: url("../assets/foodshed/foodshed_logo.svg");
+}
+.urbanteachers {
+  background-image: url("../assets/urbanteachers/ut-logo-blue.svg");
+}
+.pilon {
+  background-image: url("../assets/pilon/logo_pilon_color.svg");
 }
 .wine {
   background-image: url("../assets/wine.svg");
@@ -97,59 +143,94 @@ header {
   flex-direction: row;
   align-items: center;
 }
+
+.web {
+  height: 30em;
+  border: none;
+}
+.web .one {
+
+}
 footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  height: auto;
-  width: 100%;
+  height: 2em;
+  width: 100vw;
   margin: 0;
   position: fixed;
   padding: 2em;
   bottom: 0;
+  z-index: 10;
+  mix-blend-mode: screen;
 }
+
 img {
   object-fit: cover;
   object-position: center;
   height: 24em;
-  width: 18em;
+  width: auto;
   border: 4px solid #ffffff;
   position: absolute;
-  background-color: #ffffff;
 }
-.front {
-  z-index: 100;
-}
+
 .portfolio-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  padding: 2em;
-  height: 100% auto;
+  justify-content: stretch;
+  position: absolute;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transition: all 1s cubic-bezier(0.745, -0.015, 0.22, 0.995);
+  -moz-transition: all 1s cubic-bezier(0.745, -0.015, 0.22, 0.995);
   transition: all 1s cubic-bezier(0.745, -0.015, 0.22, 0.995);
-  transition-delay: 0.8s;
+  transition-delay: 0.6s;
 }
 ul {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  list-style-position: inside;
+  margin-bottom: 3em;
+  color: #343f34;
+}
+.bio > p {
+  color: #343f34;
 }
 p {
+
+}
+.credit {
+  font-size: .75rem;
+  margin-top: 2em;
+  text-align: left;
+}
+.portfolio-info {
+  grid-column: 9 / 12;
+  margin: 0;
+  height: 100vh;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  margin: 2em;
+  justify-content: center;
+  position: absolute;
+  z-index: 10;
+  mix-blend-mode: screen;
 }
 .img-container {
-  grid-column: 3 / 9;
-  height: 100vh !important;
+  grid-column: 2 / 9;
+  height: 100vh;
+  padding: 2em;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.test {
-  border: 4px solid #000000 !important;
-  z-index: 10 !important;
+  margin-top: 4em;
+  flex-direction: column;
+  align-items: start;
 }
 
 .done {
@@ -163,41 +244,56 @@ p {
   transition: ease-in-out all 4s;
 }
 p {
-  grid-column: 9 / 13;
-  height: 100vh;
+
+}
+.site {
+  width: 20em;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 h2 {
-  color: #ffffff;
-  font-size: 1.5em;
+  color: #FF9F1C;
+  font-size: 1.5rem;
   font-family: 'DamienDisplayBold', serif;
-  transform: rotate(-180deg);
-  letter-spacing: .15rem;
-  text-align: center !important;
-  writing-mode: vertical-rl;
-  height: 100vh;
-  width: 1.5em;
-  margin: -0.25em;
-  padding: 0;
+  letter-spacing: .05rem;
+  text-align: left;
+  mix-blend-mode: screen;
 }
 .portfolio-title {
-  height: 100%;
   width: 100%;
   grid-column: 1 / 2;
-  display: flex;
-  flex-direction: column;
+  position: absolute;
+  z-index: 10;
+  mix-blend-mode: screen;
 }
 .one {
   z-index: 1;
 }
+
 .two {
   z-index: 0;
-  margin-left: 5em;
-  margin-top: 5em;
+  margin-left: 2.5em;
+  margin-top: 2.5em;
 }
 .three {
   z-index: -1;
+  margin-left: 5em;
+  margin-top: 5em;
+}
+.four {
+  z-index: -2;
   margin-left: 10em;
   margin-top: 10em;
+}
+.five {
+  z-index: -3;
+  margin-left: 12.5em;
+  margin-top: 10em;
+}
+.six {
+  z-index: -4;
+  margin-left: 15em;
+  margin-top: 15em;
 }
 .above {
   transition-delay: 5s ease-in-out;
@@ -213,26 +309,45 @@ h2 {
 #about {
   background-color: #ffffff;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-gap: 1em;
-}
-.active-about {
+  grid-template-columns: 1fr 4fr 2fr;
+  grid-column-gap: 4em;
+  grid-row-gap: 0;
+  padding: 2em;
   opacity: 0;
+  position: fixed;
+  transition-delay: opacity 5s ease-in-out;
 }
-.bio > p {
-  color: #333F33 !important;
+
+.active-about {
+  opacity: 1 !important;
+  overflow: scroll;
+  z-index: 10;
+  transition-delay: opacity 5s ease-in-out;
+}
+.bio-footer {
+  mix-blend-mode: multiply;
+}
+
+.bio {
   grid-column: 2;
+  margin: 2em;
 }
+
+ul {
+  color: #343f34;
+  grid-column: 3;
+  align-self: end;
+  }
 
 a {
   text-decoration: none;
-  color: #ffffff;
+  color: #FF9F1C;
 }
 
 a:hover {
-  color: #FF9F1C;
+  color: #ffffff;
   transition: color .5s ease-out;
 }
 
@@ -240,17 +355,307 @@ a:hover {
     z-index: 3 !important;
     border: 4px solid #FF9F1C;
 } */
-
+#about > h1 {
+  text-align: right;
+}
 .profile > img {
   background: none;
   border: none;
-  mix-blend-mode: multiply;
-  height: 20em;
-  width: 20em;
+  mix-blend-mode: ;
+  height: 10em;
+  width: 10em;
   object-fit: contain;
   margin-left: 2.5em;
-  margin-top: 2em;
+  margin-top: 1em;
 }
 img::selection {
   background: none;
+}
+
+/* testo desto*/
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  position: relative;
+  min-width: 320px;
+}
+
+.push {
+  background: url("../assets/push.svg");
+  height: 50%;
+  width: 300%;
+  position: absolute;
+  top: 25%;
+  right: 0;
+  animation: slideshow 30s linear infinite;
+}
+@keyframes slideshow {
+  0%    { right: 0; }
+  100%  { right: -200%; }
+}
+
+button {
+  background: none;
+  font-size: 2rem;
+  font-family: 'DamienDisplayBold', serif;
+  color: #FF9F1C;
+  letter-spacing: .1rem;
+  border: none;
+}
+
+
+button:focus {outline:0;}
+
+.box_1 {
+/*  background-color: #464d38; */
+  z-index: 1;
+  transform: translateY(0vh);
+}
+
+.box_2 {
+/*  background-color: #5BBB98; */
+  z-index: 2;
+  transform: translateY(100vh);
+}
+
+.box_3 {
+  /*background-color: #af9164; */
+  z-index: 3;
+  transform: translateY(200vh);
+}
+
+.box_4 {
+/*  background-color: #49487b; */
+  z-index: 4;
+  transform: translateY(300vh);
+}
+
+.box_5 {
+/*  background-color: #154D9F; */
+  z-index: 5;
+  transform: translateY(400vh);
+}
+
+.box_6 {
+/*  background-color: #00BAA1; */
+  z-index: 6;
+  height: 100vh;
+  transform: translateY(500vh);
+}
+
+.box_7 {
+/*  background-color: #333F33; */
+  z-index: 7;
+  transform: translateY(600vh);
+}
+.box_8 {
+/*  background-color: #353128; */
+  z-index: 8;
+  transform: translateY(600vh);
+}
+
+.greeting {
+  font-family: 'DamienDisplayBold', serif;
+  font-size: 2rem;
+  color: #343f34;
+  height: 2em;
+  grid-column: 2;
+  grid-row: 1 / 2;
+}
+
+.scrl-ind::after {
+  content: '╲╱';
+  color: #FF9F1C;
+  mix-blend-mode: screen;
+  position: absolute;
+  font-size: .5em;
+  height: 2em;
+  width: 100%;
+  z-index: 10;
+  bottom:0;
+  margin: 3em;
+  text-align: center;
+  align-self: center;
+  justify-content: space-around;
+  animation: bounce 3.5s ease infinite;
+}
+
+footer::before .box_8 {
+  display: none;
+}
+.marquee {
+  overflow: hidden;
+  position: relative;
+  grid-column: 1 / 13;
+  grid-row: 1;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  z-index: -10;
+  opacity: 0.25;
+}
+
+.bg-gradient {
+  height: 100vh;
+  width: 30vw;
+  background: -webkit-linear-gradient(left, rgba(70,77,56,1) 0%,rgba(125,185,232,0) 100%);
+  z-index: 5;
+}
+.bg-gradient-2 {
+  height: 100vh;
+  width: 30vw;
+  background: -webkit-linear-gradient(left, rgba(125,185,232,0) 0%,rgba(70,77,56,1) 100%);
+  z-index: 5;
+  right: 0;
+}
+
+.img-container:hover::before {
+  content: "☺ click + drag items ☺";
+  color: #343f34;
+  z-index: 10;
+  margin-left: 40em;
+  font-size: .75em;
+}
+video {
+  height: 20em;
+  width: 30em;
+}
+
+:root{
+  --duration: 4s;
+}
+.img {
+    background-color: #ffffff;
+}
+
+@keyframes bounce {
+  50% {
+    transform: translateY(-50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+h3 {
+  font-family: 'DamienDisplayBold', serif;
+  letter-spacing: .05rem;
+  color: #343f34;
+}
+
+@media screen
+  and (min-device-width: 1200px)
+  and (max-device-width: 1600px)
+  and (-webkit-min-device-pixel-ratio: 1) {
+
+}
+
+@media (max-width: 812px) {
+    .portfolio-container {
+     grid-template-columns: 1fr;
+     grid-template-rows: 1fr 6fr 5fr;
+     grid-gap: 0;
+     width: 100%;
+     justify-content: flex-start;
+    }
+
+    .portfolio-title {
+      grid-column: 1 / 2;
+      height: 3em;
+      width: 100%;
+      grid-row: 1 / 2;
+      z-index: 10;
+    }
+    .img-container {
+      grid-column: 1;
+      width: 100vw;
+      height: 50%;
+      margin-top: 0;
+      grid-row: 2;
+      margin: 0;
+    }
+
+    .two {
+      margin-left: .75em;
+      margin-top: .75em;
+    }
+    .three {
+      margin-left: 1.5em;
+      margin-top: 1.5em;
+    }
+    .four {
+      margin-left: 2.25em;
+      margin-top: 2.25em;
+    }
+    .portfolio-info {
+      grid-column: 1;
+      height: auto;
+      width: auto;
+      grid-row: 3;
+      justify-content: flex-start;
+      margin: 2em;
+    }
+    img {
+        height: 16em;
+    }
+    h1 {
+      font-size: 1.25rem;
+    }
+    button {
+      font-size: 1.25rem;
+    }
+    footer::before {
+      font-size: .5em;
+    }
+    header {
+      height: 4em;
+      padding: 3em 1.75em 0 1.75em;
+    }
+    h2 {
+      font-size: 1.25rem;
+      width: 1em;
+      letter-spacing: .15rem;
+      text-align: left !important;
+      width: auto;
+      grid-row: 1;
+      z-index: 10;
+    }
+    p {
+      grid-row: 2;
+    }
+    .item {
+      display: none;
+    }
+    .line {
+      width: 100%;
+      border-bottom: 2px solid #FF9F1C;
+    }
+    #about {
+      grid-template-columns: 1fr;
+      grid-row-gap: 0;
+      padding: 2em;
+    }
+    .bio {
+      grid-column: 1;
+    }
+    .line-2 {
+      display: none;
+    }
+    .skills {
+      display: none;
+    }
+}
+
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 812px)
+  and (-webkit-min-device-pixel-ratio: 3) {
+
 }
