--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,41 @@ body ::selection {
   color: #333F33;
   background: #FF9F1C;
 }
+
+.loading {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+   width: 100vw;
+   background-color: #ffffff;
+   z-index: 15;
+   position: fixed;
+   transition: opacity 1s
+}
+
+.loading__anim {
+  width: 50px;
+  height: 50px;
+  border:  2px solid #333F33;
+  border-left-color: #FF9F1C;
+  border-radius: 50%;
+  display: block;
+  animation: rotate 600ms infinite linear;
+}
+
+section.loading.hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+@keyframes rotate {
+  to {
+    transform: rotate(1turn)
+  }
+}
+
 /*.wrapper {
   height: 100vh;
   width: 100vw;
@@ -59,19 +94,11 @@ header {
   padding: 2em;
   z-index: 10;
 }
+
 .circle {
-  height: 5em;
-  width: 5em;
-  border: 4px solid #FF9F1C;
-  border-radius: 50%;
-  z-index: -1;
-  position: absolute;
-}
-.circle-2 {
   height: 10em;
   width: 10em;
   background-color: #FF9F1C;
-/*  border: 4px solid #FF9F1C; */
   border-radius: 50%;
 }
 
@@ -93,7 +120,7 @@ header {
   display: flex;
   align-self: flex-start;
   grid-row: 1;
-  padding-top: 3em;
+  margin-top: 3em;
 }
 .item {
   z-index: 5;
@@ -142,13 +169,6 @@ header {
   align-items: center;
 }
 
-.web {
-  height: 30em;
-  border: none;
-}
-.web .one {
-
-}
 footer {
   display: flex;
   flex-direction: row;
@@ -156,7 +176,6 @@ footer {
   align-items: flex-end;
   height: 2em;
   width: 100vw;
-  margin: 0;
   position: fixed;
   padding: 2em;
   bottom: 0;
@@ -175,7 +194,7 @@ img {
 .portfolio-container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  justify-content: stretch;
+  justify-content: space-between;
   position: absolute;
   left: 0;
   width: 100vw;
@@ -201,14 +220,8 @@ ul {
 .bio > p {
   color: #343f34;
 }
-p {
 
-}
-.credit {
-  font-size: .75rem;
-  margin-top: 2em;
-  text-align: left;
-}
+
 .portfolio-info {
   grid-column: 9 / 12;
   margin: 0;
@@ -226,7 +239,7 @@ p {
   display: flex;
   margin-top: 4em;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .done {
@@ -239,9 +252,7 @@ p {
   /*grid-row: 1;*/
   transition: ease-in-out all 4s;
 }
-p {
 
-}
 .site {
   width: 20em;
   overflow-y: scroll;
@@ -320,18 +331,16 @@ h2 {
   z-index: 10;
   transition-delay: opacity 5s ease-in-out;
 }
-.bio-footer {
-}
 
 .bio {
   grid-column: 2;
-  margin: 2em;
+  padding: 2em;
 }
 
 ul {
   color: #343f34;
   grid-column: 3;
-  align-self: end;
+  align-self: flex-end;
   }
 
 a {
@@ -344,13 +353,6 @@ a:hover {
   transition: color .5s ease-out;
 }
 
-/*div:hover img.three {
-    z-index: 3 !important;
-    border: 4px solid #FF9F1C;
-} */
-#about > h1 {
-  text-align: right;
-}
 .profile > img {
   background: none;
   border: none;
@@ -405,8 +407,6 @@ button:hover {
   transition: ease-in-out .5s;
 }
 
-
-button:focus {outline:0;}
 
 .box_1 {
 /*  background-color: #464d38; */
@@ -474,7 +474,7 @@ button:focus {outline:0;}
   width: 100%;
   z-index: 10;
   bottom:0;
-  margin: 3em;
+  padding: 3em;
   text-align: center;
   align-self: center;
   justify-content: space-around;
@@ -496,19 +496,6 @@ footer::before .box_8 {
   opacity: 0.25;
 }
 
-.bg-gradient {
-  height: 100vh;
-  width: 30vw;
-  background: -webkit-linear-gradient(left, rgba(70,77,56,1) 0%,rgba(125,185,232,0) 100%);
-  z-index: 5;
-}
-.bg-gradient-2 {
-  height: 100vh;
-  width: 30vw;
-  background: -webkit-linear-gradient(left, rgba(125,185,232,0) 0%,rgba(70,77,56,1) 100%);
-  z-index: 5;
-  right: 0;
-}
 
 .img-container:hover::before {
   content: "☺ click + drag items ☺";
@@ -522,9 +509,7 @@ video {
   width: 30em;
 }
 
-:root{
-  --duration: 4s;
-}
+
 .img {
     background-color: #ffffff;
 }
@@ -595,7 +580,7 @@ h3 {
       width: auto;
       grid-row: 3;
       justify-content: flex-start;
-      margin: 2em;
+      padding: 2em;
     }
     img {
         height: 16em;
