testing mobile script solution

--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,23 @@
 
 html {
   height: 100%;
+  overflow: scroll;
+  overflow-x: hidden;
 }
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
 body {
+  background-image: url('../assets/light_toast_@2X.png');
+  background-repeat: repeat;
+  background-size: 6em;
   background-color: #ffffff;
   font-family: 'Lato', sans-serif;
   color: #FF9F1C;
   margin: 0;
   padding: 0;
-  /*overflow: hidden; */
   cursor: crosshair;
 }
 body ::selection {
@@ -33,7 +42,7 @@ body ::selection {
    align-items: center;
    height: 100vh;
    width: 100vw;
-   background-color: #ffffff;
+   background-color: #333F33;
    z-index: 15;
    position: fixed;
    transition: opacity 1s
@@ -42,7 +51,7 @@ body ::selection {
 .loading__anim {
   width: 50px;
   height: 50px;
-  border:  2px solid #333F33;
+  border:  2px solid #ffffff;
   border-left-color: #FF9F1C;
   border-radius: 50%;
   display: block;
@@ -250,7 +259,7 @@ ul {
 }
 .primary-image {
   /*grid-row: 1;*/
-  transition: ease-in-out all 4s;
+  transition: .2s linear;
 }
 
 .site {
@@ -322,14 +331,13 @@ h2 {
   padding: 2em;
   opacity: 0;
   position: fixed;
-  transition-delay: opacity 5s ease-in-out;
 }
 
 .active-about {
   opacity: 1 !important;
   overflow: scroll;
   z-index: 10;
-  transition-delay: opacity 5s ease-in-out;
+  transition: .2s linear;
 }
 
 .bio {
@@ -401,10 +409,11 @@ button {
   color: #FF9F1C;
   letter-spacing: .1rem;
   border: none;
+  outline: none;
 }
 button:hover {
   color: #343f34;
-  transition: ease-in-out .5s;
+  transition: linear .5s;
 }
 
 
@@ -540,7 +549,6 @@ h3 {
 @media (max-width: 812px) {
     .portfolio-container {
      grid-template-columns: 1fr;
-     grid-template-rows: 1fr 6fr 5fr;
      grid-gap: 0;
      width: 100%;
      justify-content: flex-start;
@@ -555,35 +563,47 @@ h3 {
     }
     .img-container {
       grid-column: 1;
+      display: flex;
+      flex-direction: column;
       width: 100vw;
-      height: 50%;
+      height: 100%;
       margin-top: 0;
-      grid-row: 2;
       margin: 0;
     }
 
     .two {
-      margin-left: .75em;
-      margin-top: .75em;
+      margin: 0;
+      z-index: 1;
     }
     .three {
-      margin-left: 1.5em;
-      margin-top: 1.5em;
+      margin: 0;
+      z-index: 1;
     }
     .four {
-      margin-left: 2.25em;
-      margin-top: 2.25em;
+      margin: 0;
+      z-index: 1;
+    }
+    .five {
+      margin: 0;
+      z-index: 1;
     }
     .portfolio-info {
       grid-column: 1;
       height: auto;
       width: auto;
-      grid-row: 3;
       justify-content: flex-start;
       padding: 2em;
     }
+    .current {
+      display: none;
+    }
+    .above {
+      display: none;
+    }
     img {
         height: 16em;
+        display: block;
+        margin: 1em;
     }
     h1 {
       font-size: 1.25rem;
@@ -597,6 +617,9 @@ h3 {
     header {
       height: 4em;
       padding: 3em 1.75em 0 1.75em;
+    }
+    .draggable {
+      display: none;
     }
     h2 {
       font-size: 1.25rem;
