clean up js files and test append scripts

--- a/css/main.css
+++ b/css/main.css
@@ -462,7 +462,7 @@ button:hover {
 .box_8 {
 /*  background-color: #353128; */
   z-index: 8;
-  transform: translateY(600vh);
+  transform: translateY(700vh);
 }
 
 .greeting {
@@ -574,18 +574,22 @@ h3 {
     .two {
       margin: 0;
       z-index: 1;
+      display: block;
     }
     .three {
       margin: 0;
       z-index: 1;
+      display: block;
     }
     .four {
       margin: 0;
       z-index: 1;
+      display: block;
     }
     .five {
       margin: 0;
-      z-index: 1;
+      z-index: 1 !important;
+      display: block;
     }
     .portfolio-info {
       grid-column: 1;
@@ -595,11 +599,9 @@ h3 {
       padding: 2em;
     }
     .current {
-      display: none;
+
     }
-    .above {
-      display: none;
-    }
+
     img {
         height: 16em;
         display: block;
