--- a/css/main.css
+++ b/css/main.css
@@ -547,44 +547,49 @@ h3 {
 }
 
 @media (max-width: 812px) {
+   body {
+
+   }
     .portfolio-container {
      grid-template-columns: 1fr;
+     display: flex;
+     flex-direction: column;
      grid-gap: 0;
      width: 100%;
-     justify-content: flex-start;
+     min-height: 100%;
+     justify-content: center;
     }
 
-    .portfolio-title {
-      grid-column: 1 / 2;
-      height: 3em;
-      width: 100%;
-      grid-row: 1 / 2;
-      z-index: 10;
-    }
     .img-container {
       grid-column: 1;
       display: flex;
       flex-direction: column;
-      width: 100vw;
-      height: 100%;
+      width: 100%;
+      height: 500px;
       margin-top: 0;
       margin: 0;
+      overflow: scroll;
+    }
+    .one {
+      margin: 0;
+      z-index: 1;
+      display: block;
     }
 
     .two {
       margin: 0;
       z-index: 1;
-      display: block;
+      display: block !important;
     }
     .three {
       margin: 0;
       z-index: 1;
-      display: block;
+      display: block !important;
     }
     .four {
       margin: 0;
       z-index: 1;
-      display: block;
+      display: block !important;
     }
     .five {
       margin: 0;
@@ -592,21 +597,29 @@ h3 {
       display: block;
     }
     .portfolio-info {
-      grid-column: 1;
       height: auto;
       width: auto;
-      justify-content: flex-start;
+      display: block;
+      position: static;
       padding: 2em;
+      z-index: 1;
     }
     .current {
 
     }
-
-    img {
-        height: 16em;
-        display: block;
-        margin: 1em;
+    .scrl-ind {
+      display: none;
     }
+    .img {
+      margin: 1em 0;
+    }
+    img {
+        height: auto;
+        width: 100%;
+        display: block;
+        position: static;
+    }
+
     h1 {
       font-size: 1.25rem;
     }
@@ -629,11 +642,10 @@ h3 {
       letter-spacing: .15rem;
       text-align: left !important;
       width: auto;
-      grid-row: 1;
-      z-index: 10;
+      z-index: 0;
     }
     p {
-      grid-row: 2;
+
     }
     .item {
       display: none;
