--- a/css/main.css
+++ b/css/main.css
@@ -98,9 +98,9 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-around;
   width: 100vw;
-  height: 8em;
+  height: 7em;
   position: fixed;
   padding: 2em;
   z-index: 10;
@@ -120,7 +120,8 @@ header {
   grid-row: 1 / 3;
 }
 .line {
-  width: 93%;
+  margin-left: 2em;
+  width: 85%;
   border-bottom: 2px solid #FF9F1C;
 }
 .line-2 {
@@ -140,6 +141,14 @@ header {
   height: 5em;
   background-size: contain;
   background-repeat: no-repeat;
+  grid-column: 1;
+  grid-row: 1;
+}
+.number {
+  grid-column: 12;
+  grid-row: 1;
+  padding: 0 2em;
+  color: #FF9F1C;
 }
 .home {
   font-family: 'Lato', sans-serif;
@@ -196,7 +205,7 @@ footer {
 img {
   object-fit: cover;
   object-position: center;
-  height: 24em;
+  height: 26em;
   width: auto;
   border: 4px solid #ffffff;
   position: absolute;
@@ -245,11 +254,27 @@ img {
   display: flex;
   height: 100%;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
 }
 video {
-  border: 4px solid #ffffff;
+  height: auto;
+  width: 34em;
+  margin-top: 1em;
+  border: 4px solid #EAEAEA;
+  display: block;
+}
+.screen-top {
+  width: 34em;
+  height: auto;
+  align-self: flex-start;
+  justify-content: flex-start;
+  margin: 0;
+  padding: 0;
+  border: none;
+  display: block;
+  margin-bottom: 1em;
+  z-index: 0;
 }
 
 .done {
@@ -277,7 +302,12 @@ h2 {
 }
 .portfolio-title {
   width: 100%;
-  grid-column: 1 / 2;
+  height: 7em;
+  grid-column: 1 / 13;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   position: absolute;
   z-index: 10;
 }
@@ -510,11 +540,6 @@ footer::before .box_8 {
   font-size: .75em;
   transition: .2s linear;
 }
-video {
-  height: 24em;
-  width: auto;
-}
-
 
 .img {
     background-color: #ffffff;
@@ -556,6 +581,7 @@ h3 {
      opacity: 0.5;
      top: 0;
      background-repeat: none;
+     margin: 2em 0;
    }
     .portfolio-container {
      grid-template-columns: 1fr;
@@ -564,7 +590,7 @@ h3 {
      grid-gap: 0;
      width: 100%;
      min-height: 100%;
-     justify-content: center;
+     justify-content: flex-start;
     }
 
     .img-container {
@@ -572,7 +598,7 @@ h3 {
       display: flex;
       flex-direction: column;
       width: 100%;
-      height: 60vh;
+      height: 100vh;
       margin-top: 0;
       margin: 0;
       overflow: scroll;
@@ -583,12 +609,22 @@ h3 {
       flex-direction: column;
       width: 100%;
       height: auto;
-      padding: 2em;
+      padding: 0 2em;
     }
     video {
       width: 100%;
-      height: 100%;
+      height: auto;
       background-color: #ffffff;
+      padding: 0;
+      margin: 0;
+    }
+    .screen-top {
+      width: 100%;
+      height: auto;
+      display: block;
+      padding:0;
+      margin: 0;
+      position: static;
     }
 
     .one {
@@ -637,15 +673,19 @@ h3 {
         display: block;
         position: static;
     }
+    footer {
+      background-color: #ffffff;
+    }
 
     h1 {
       font-size: 1.25rem;
+      letter-spacing: .05rem;
     }
     button {
       font-size: 1.25rem;
     }
     .line {
-      display: none;
+      width: 75%
     }
     header {
       display: none;
@@ -656,7 +696,7 @@ h3 {
     h2 {
       font-size: 1.25rem;
       width: 1em;
-      letter-spacing: normal;
+      letter-spacing: .05rem;
       text-align: left !important;
       width: auto;
       z-index: 0;
@@ -692,12 +732,35 @@ h3 {
     .img-container:hover::before {
       display: none;
     }
+    .number {
+      grid-column: 1;
+    }
+    .portfolio-title {
+      height: 7em;
+      grid-column: 1;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-items: center;
+      position: static;
+    }
+    .portfolio-title::after {
+
+    background-color: #FF9F1C;
+    content: "";
+    display: inline-block;
+    height: 2px;
+    position: relative;
+    width: 70%;
+    z-index: 0;
+    }
 }
 @media (max-width: 800px) and (min-width: 479px) {
     .portfolio-title {
       grid-column: 1;
       top: 0;
     }
+
     .portfolio-container {
      grid-template-columns: 1fr;
      display: flex;
@@ -712,7 +775,8 @@ h3 {
     .img-container {
       grid-column: 1;
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
+      justify-content: stretch;
       width: 100%;
       height: 50vh;
       margin-top: 0;
@@ -725,12 +789,22 @@ h3 {
       flex-direction: column;
       width: 100%;
       height: auto;
-      padding: 2em;
+      padding: 0 2em;
     }
     video {
       width: 100%;
-      height: 100%;
+      height: auto;
       background-color: #ffffff;
+      padding: 0;
+      margin: 0;
+    }
+    .screen-top {
+      width: 100%;
+      height: auto;
+      display: block;
+      padding:0;
+      margin: 0;
+      position: static;
     }
 
     .portfolio-info {
@@ -765,7 +839,7 @@ h3 {
         grid-row: 1;
     }
     .line {
-      width: 85%;
+      width: 80%;
       border-bottom: 2px solid #FF9F1C;
     }
     .line-2 {
