--- a/css/main.css
+++ b/css/main.css
@@ -268,13 +268,13 @@ img {
 }
 video {
   height: auto;
-  width: 34em;
-  margin-top: 1em;
+  width: 40em;
+  margin-top: 1.25em;
   border: 4px solid #EAEAEA;
   display: block;
 }
 .screen-top {
-  width: 34em;
+  width: 40em;
   height: auto;
   align-self: flex-start;
   justify-content: flex-start;
@@ -282,7 +282,6 @@ video {
   padding: 0;
   border: none;
   display: block;
-  margin-bottom: 1em;
   z-index: 0;
 }
 
@@ -295,6 +294,9 @@ video {
 .primary-image {
   /*grid-row: 1;*/
   transition: .2s linear;
+}
+.mobile-disc {
+  display: none;
 }
 
 .site {
@@ -763,7 +765,11 @@ h3 {
     width: 70%;
     z-index: 0;
     }
+    .mobile-disc {
+      display: block;
+    }
 }
+
 @media (max-width: 800px) and (min-width: 479px) {
     .portfolio-title {
       grid-column: 1;
@@ -824,7 +830,9 @@ h3 {
       padding: 2em;
       z-index: 1;
     }
-
+    .marquee {
+      height: 60vh;
+    }
     #about {
       grid-template-columns: 1fr;
       grid-row-gap: 0;
@@ -860,6 +868,9 @@ h3 {
     }
     .img-container:hover::before {
       margin-left: 10em;
+    }
+    .mobile-disc {
+      display: block;
     }
 }
 
