--- a/css/main.css
+++ b/css/main.css
@@ -145,8 +145,8 @@ header {
   background-image: url("../assets/scratchmade/scratchmade.svg");
 }
 
-.powerslam {
-  background-image: url("../assets/powerslam/PSW_Logo.svg");
+.noonas {
+  background-image: url("../assets/noonas/noonas_logo.svg");
 }
 
 .foodshed {
@@ -351,6 +351,11 @@ h2 {
   margin-left: 15em;
   margin-top: 15em;
 }
+.seven {
+  z-index: -5;
+  margin-left: 17.5em;
+  margin-top: 17.5em;
+}
 .above {
   transition-delay: 5s ease-in-out;
   transform: translateY(-200vh);
@@ -539,7 +544,7 @@ footer::before .box_8 {
   height: 100vh;
   margin: 0;
   z-index: -10;
-  opacity: 0.5;
+  opacity: 0.35;
 }
 
 
